--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -155,7 +155,7 @@ jobs:
   # Run tests
   tests:
     runs-on: luxonis-arm-tests
-    needs: [build-linux-armhf, build-windows-x86_64, build-macos-x86_64, build-linux-x86_64]
+    needs: [build-linux-armhf, build-windows-x86_64, build-linux-x86_64]
     steps:
       - uses: actions/checkout@v2
         with:
