--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Get Version
         id: vars
         run: echo ::set-output name=short_ref::${GITHUB_REF#refs/*/}
-      - name: Build and push
-        uses: crazy-max/ghaction-docker-buildx@v1
-        with:
-          version: latest
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Build and push
         run: |
           docker buildx build --push --platform linux/arm64,linux/amd64,linux/arm/v7 -t luxonis/depthai-library:${{ steps.vars.outputs.short_ref }} -f ci/Dockerfile .
